# funcy-stubs

./: .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: stubtest.yaml
funcy/: _inspect.pyi  calc.pyi  colls.pyi  debug.pyi  flow.pyi  primitives.pyi  types.pyi
funcy-stubs/: __init__.pyi  compat.pyi  decorators.pyi  funcmakers.pyi  funcolls.pyi  funcs.pyi  objects.pyi  py2.pyi  py3.pyi  seqs.pyi  strings.pyi  tree.pyi
