[project]
name = "funcy-stubs"
version = "0.1.0"
description = "Type stubs for funcy"
authors = [
    {name = "Ruan Comelli", email = "ruancomelli@gmail.com"},
]
dependencies = [
    "funcy==1.17",
    "typing-extensions>=3.10.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "BSD"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]

[tool.pdm.build]
includes = [
    "funcy-stubs/**.pyi"
]

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.971",
    "whatever>=0.6",
    "pytest>=6.2.5",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
