[project]
name = "funcy-stubs"
version = "0.1.1"
description = "Type stubs for funcy"
authors = [
    {name = "Ruan Comelli", email = "ruancomelli@gmail.com"},
]
dependencies = [
    "funcy>=2.0",
    "typing-extensions>=3.10.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "BSD"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Stubs Only",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["type-annotations", "mypy-stubs"]

[project.urls]
Homepage = "https://github.com/ruancomelli/funcy-stubs"
Repository = "https://github.com/ruancomelli/funcy-stubs"
Documentation = "https://github.com/ruancomelli/funcy-stubs"

[tool.pdm.build]
includes = [
    "funcy-stubs/**.pyi"
]

[tool.pdm.dev-dependencies]
dev = [
    "mypy==1.3.0",
    "whatever>=0.6",
    "pytest>=6.2.5",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
